--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -12,6 +12,9 @@
 /* Usage */
 section, div, span {
     @media @mobile {
+        .bt-center {
+            top: 85vh;
+        }
         .section .playervideo video {
             height: auto;
             width: 75vw;
@@ -44,8 +47,8 @@ section, div, span {
         .TextComponent--left {
             margin-left: 5vw;
             padding-right: 15vw;
-            font-size: 20px;
-            line-height: 30px;
+            font-size: 19px;
+            line-height: 25px;
         }
         .ButtonCta.ButtonComponent--historia {
             width: auto;
@@ -142,6 +145,11 @@ section, div, span {
                 left: 20px;
                 padding: 0 60px 0 10px;
                 position: relative;
+            }
+           .izq .bloque {
+                font-size: 13px;
+                display: inline-block;
+                margin-bottom: 100px;
             }
        }
     }
