--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -984,6 +984,20 @@ section{
             -webkit-background-clip: text;
             background-clip: text;
             padding: 10px 10px 0 0;
+            display: inline;
+        }
+        @media (hover: hover) {
+            #overlay {
+                background:
+                url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  
+                no-repeat center center;
+                background-clip: text;
+                -webkit-background-clip: text;
+                background-color: black;
+                color: black; /* change this color */
+                text-shadow: none;
+                box-shadow: 0px 0px 10px -5px white, inset 0px 0px 200px -50px white;
+            }
         }
         .izq{
             font-family: 'Libre Franklin', sans-serif;
