--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -172,7 +172,7 @@ b.primera {
     width: 270px;
     margin: 0 auto;*/
     position: absolute;
-    bottom: 0;
+    bottom: 50px;
     width: 100%;
     margin: 0 auto;
     .contentlogo img {
