--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -986,6 +986,7 @@ section{
             padding: 10px 10px 0 0;
             display: inline;
         }
+        /*
         @media (hover: hover) {
             #overlay {
                 background:
@@ -994,11 +995,11 @@ section{
                 background-clip: text;
                 -webkit-background-clip: text;
                 background-color: black;
-                color: black; /* change this color */
+                color: black; 
                 text-shadow: none;
                 box-shadow: 0px 0px 10px -5px white, inset 0px 0px 200px -50px white;
             }
-        }
+        }*/
         .izq{
             font-family: 'Libre Franklin', sans-serif;
             text-transform: uppercase;
