--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -977,8 +977,7 @@ section{
         padding: 40px 50px;
         #overlay {
             background:
-            url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  
-            no-repeat center center;
+            url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  center center;
             background-size:initial;
             color: transparent;
             -webkit-background-clip: text;
