--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -976,10 +976,10 @@ section{
     .creditos{
         padding: 40px 50px;
         #overlay {
-            background:
-            url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  center center;
+            /*background:
+            url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  center center;*/
             background-size:initial;
-            color: transparent;
+            color: #EEA0AD;
             -webkit-background-clip: text;
             background-clip: text;
             padding: 10px 10px 0 0;
@@ -1360,9 +1360,9 @@ section{
             background-position: right; /* pasar a generales */
         }
         #overlay {
-            background: url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg') no-repeat center center;
+            /*background: url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg') no-repeat center center;*/
             background-size: initial;
-            color: transparent;
+            color: #EEA0AD;
             -webkit-background-clip: text;
             background-clip: text;
             position: absolute;
