reemplazo imagenes de córdoba más iluminadas

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1337,6 +1337,10 @@ section{
     width: 100vw;
     height: 100vh;
     background: url('../img/exposicion-mapa_1920x1700.jpg') 50% 50% no-repeat ;
+    transition-property: background-position;
+    transition-duration: 3s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
   }
   
   
