folletos ilustrados sin opacidad imagenes de fondo

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1392,6 +1392,12 @@ section{
     }
 }
 
+#fullpage-interna-lat_3{
+    .ComponentBg{
+        opacity: 1;
+    }
+}
+
 /*-----INDEX------*/
 
 div#mute {
