hover exposicion responsive

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1398,6 +1398,36 @@ section{
     }
 }
 
+.botones{
+    .arauca_btn{
+        background-image: url('../img/arauca_btn.jpg');
+        width: 100%;
+        height: 240px;
+        background-size: cover;
+        &:hover{
+            background-image: url('../img/arauca_hover.jpg');
+        }
+    }
+    .cordoba_btn{
+        background-image: url('../img/cordoba_btn.jpg');
+        width: 100%;
+        height: 240px;
+        background-size: cover;
+        &:hover{
+            background-image: url('../img/cordoba_hover.jpg');
+        }
+    }
+    .caqueta_btn{
+        background-image: url('../img/caqueta_btn.jpg');
+        width: 100%;
+        height: 240px;
+        background-size: cover;
+        &:hover{
+            background-image: url('../img/caqueta_hover.jpg');
+        }
+    }
+}
+
 /*-----INDEX------*/
 
 div#mute {
