degradado color textos home y museo

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -976,12 +976,17 @@ section{
     .creditos{
         padding: 40px 50px;
         #overlay {
-            /*background:
-            url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  center center;*/
+            /*background: url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg')  center center;*/
+            background: rgb(0,100,176);
+            background: -moz-linear-gradient(141deg, rgba(0,100,176,1) 0%, rgba(134,118,185,1) 19%, rgba(248,169,174,1) 37%, rgba(203,168,78,1) 55%, rgba(75,95,26,1) 76%);
+            background: -webkit-linear-gradient(141deg, rgba(0,100,176,1) 0%, rgba(134,118,185,1) 19%, rgba(248,169,174,1) 37%, rgba(203,168,78,1) 55%, rgba(75,95,26,1) 76%);
+            background: linear-gradient(141deg, rgba(0,100,176,1) 0%, rgba(134,118,185,1) 19%, rgba(248,169,174,1) 37%, rgba(203,168,78,1) 55%, rgba(75,95,26,1) 76%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0064b0",endColorstr="#4b5f1a",GradientType=1);
             background-size:initial;
-            color: #EEA0AD;
+            color: transparent;
             -webkit-background-clip: text;
             background-clip: text;
+
             padding: 10px 10px 0 0;
             display: inline;
         }
@@ -1365,8 +1370,13 @@ section{
         }
         #overlay {
             /*background: url('../cordoba/foto/museo-flip-cordoba-introejemplo.jpg') no-repeat center center;*/
+            background: rgb(0,100,176);
+            background: -moz-linear-gradient(141deg, rgba(0,100,176,1) 0%, rgba(134,118,185,1) 19%, rgba(248,169,174,1) 37%, rgba(203,168,78,1) 55%, rgba(75,95,26,1) 76%);
+            background: -webkit-linear-gradient(141deg, rgba(0,100,176,1) 0%, rgba(134,118,185,1) 19%, rgba(248,169,174,1) 37%, rgba(203,168,78,1) 55%, rgba(75,95,26,1) 76%);
+            background: linear-gradient(141deg, rgba(0,100,176,1) 0%, rgba(134,118,185,1) 19%, rgba(248,169,174,1) 37%, rgba(203,168,78,1) 55%, rgba(75,95,26,1) 76%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0064b0",endColorstr="#4b5f1a",GradientType=1);
             background-size: initial;
-            color: #EEA0AD;
+            color: transparent;
             -webkit-background-clip: text;
             background-clip: text;
             position: absolute;
