Mejora SEO Meta Tags

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1342,10 +1342,11 @@ section{
     width: 100vw;
     height: 100vh;
     background: url('../img/exposicion-mapa_1920x1700.jpg') 50% 50% no-repeat ;
-    transition-property: background-position;
-    transition-duration: 3s;
-    transition-timing-function: ease-in-out;
-    transition-delay: 0s;
+
+    /* transition-property: background-position; */
+    /* transition-duration: 3s; */
+    /* transition-timing-function: ease-in-out; */
+    /* transition-delay: 0s; */
   }
   
   
