inicio setup map > fondo > base

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1363,7 +1363,7 @@ section{
       border:3px solid fuchsia;
       .fondo{border:3px solid blue;}
       &:hover #follower { display:block; }
-      #follower{
+      #base{
         border:3px solid yellow;
         position : absolute;
         background: url('../img/exposicion-mapa_1920x1700.jpg');
