ok movimiento inercia mapa

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1341,11 +1341,6 @@ section{
     width: 100vw;
     height: 100vh;
     background: url('../img/exposicion-mapa_1920x2091.jpg') 50% 50% no-repeat ;
-
-    /* transition-property: background-position; */
-    /* transition-duration: 3s; */
-    /* transition-timing-function: ease-in-out; */
-    /* transition-delay: 0s; */
   }
   
   
@@ -1353,27 +1348,50 @@ section{
 
 
   .map {
-
+    .cordoba_txt{
+        position: absolute;
+        transition: opacity 1s;
+        z-index: 2;
+        left: 40%;
+        top: 10%;
+        opacity: 0;
+    }
     #punto_cordoba{
         position: absolute;
         background: transparent;
         cursor: pointer;
         z-index:2;
-        border: 1px dotted red;
+        /* border: 1px dotted red; */
+    }
+    .arauca_txt{
+        position: absolute;
+        transition: opacity 1s;
+        z-index: 2;
+        left: 64%;
+        top: 20%;
+        opacity: 0;
     }
     #punto_arauca{
         position: absolute;
         background: transparent;
         cursor: pointer;
         z-index:2;
-        border: 1px dotted red;
+        /* border: 1px dotted red; */
+    }
+    .caqueta_txt{
+        position: absolute;
+        transition: opacity 1s;
+        z-index: 2;
+        left: 50%;
+        top: 50%;
+        opacity: 0;
     }
     #punto_caqueta{
         position: absolute;
         background: transparent;
         cursor: pointer;
         z-index:2;
-        border: 1px dotted red;
+        /* border: 1px dotted red; */
     }
       width:100vw;
       height:100vh;   
@@ -1381,16 +1399,16 @@ section{
       top:0;
       left:0;
       overflow:hidden;
-      border:3px solid fuchsia;
+      /* border:3px solid fuchsia; */
       background: rgb(225,235,245);
       background: -moz-linear-gradient(141deg, rgba(225,235,245,1) 19%, rgba(249,246,241,1) 76%);
       background: -webkit-linear-gradient(141deg, rgba(225,235,245,1) 19%, rgba(249,246,241,1) 76%);
       background: linear-gradient(141deg, rgba(225,235,245,1) 19%, rgba(249,246,241,1) 76%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e1ebf5",endColorstr="#f9f6f1",GradientType=1);
-      .fondo{border:3px solid blue;}
+      .fondo{/* border:3px solid blue; */}
       &:hover #follower { display:block; }
       #base{
-        border:3px solid yellow;
+        /* border:3px solid yellow; */
         position : absolute;
         background-image: url('../img/exposicion-mapa_1920x1700.jpg');
         background-repeat: no-repeat;
